compiler/test-data/parser/blueprint/errors/param_missing_type.frel
module blueprint.errors.param_missing_type

import test.blueprint

blueprint Greeting(name) {
    text { name }
}
